Added working ffmpeg client implementation

--- a/client/index.html
+++ b/client/index.html
@@ -1,3 +1,14 @@
 <!-- Documentation of videoconverter can be found at http://bgrins.github.io/videoconverter.js/ -->
 <script src="../libs/ffmpeg.js"></script>
 <script src="./index.js"></script>
+<style>
+    * {
+        font-family: Calibri, Candara, Segoe, Segoe UI, Optima, Arial, sans-serif;
+        color: white;
+        background-color: rgb(29, 29, 29);
+    }
+</style>
+<body>
+    <input id="fileInput" type="file" name="file" />
+    <pre id="fileContent"></pre>
+</body>
