Fixed continuous prompt issue

--- a/client/index.html
+++ b/client/index.html
@@ -1,4 +1,4 @@
-<!-- Documentation of videoconverter can be found at http://bgrins.github.io/videoconverter.js/ -->
+<!-- Documentation of ffmpeg.js can be found at https://github.com/Kagami/ffmpeg.js -->
 <script src="../libs/ffmpeg.js"></script>
 <script src="./index.js"></script>
 <style>
