Added info to readme

--- a/client/index.html
+++ b/client/index.html
@@ -12,3 +12,7 @@
     <input id="fileInput" type="file" name="file" />
     <pre id="fileContent"></pre>
 </body>
+<title>API Demo</title>
+<h3>Choose a file to process for the demo.</h3>
+<h3>The response file from the server will be downloaded after processing.</h3>
+<h3>Open the developer console (F12) to view verbose.</h3>
